# microgo

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
as/: as.py
auth_srv/: .env.sample  index.py
bootstrap/mariadb/: init.sql
bootstrap/mongodb/: init-mongo.js
celery-app/: .env.example  docker-compose.yml  index.py  instantiation.py  server.py  worker.py
celery-app/bootstrap/mariadb/: init.sql
celery-app/bootstrap/mongodb/: init-mongo.js
celery-app/controllers/: __init__.py  download.py  upload.py
celery-app/rabbitmq_image/: definitions.json
convert_srv/: index.py
gateway_srv/: .env.sample  config.py  index.py
gateway_srv/libs/: __init__.py  authenticate.py  video.py
lib/auth/: __init__.py  auth.py
lib/errors/: __init__.py  errors.py
lib/file_access/: __init__.py  file_access.py
lib/message_queue/: __init__.py  producer.py
monolith/: .env.example  config.py  docker-compose.yml  dtypes.py  index.py
monolith/bootstrap/mongodb/: init-mongo.js
monolith/libs/: __init__.py  converter.py  download.py  file_access.py  img_collection.py  img_process.py  login.py  upload.py  validate.py
monolith/tests/: test_connection.py  test_login.sh  test_mariadb_connection.py  test_mongodb_connection.py  test_pil_open_mongo.py  test_read_fs_metadata.py  test_upload.sh  test_upload_one.sh
rabbitmq_image/: definitions.json
tests/: test_connect_mongo.py  test_mariadb_connection.py  test_mariadb_table_exist.py
