[tool.poetry]
name = "microgo"
version = "0.1.0"
description = ""
authors = ["highlander-spirou <highlandetspirou2812@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.monolith.dependencies]
flask = "^3.0.0"
pymongo = "^4.6.1"
pillow = "^10.1.0"
pyjwt = "^2.8.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.23"
mysql-connector-python = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
